@@ -127,6 +127,7 @@ namespace AriaMaestosa
     DECLARE_LOCAL_EVENT_TYPE(wxEVT_UPDATE_WAIT_WINDOW, -1)
     DECLARE_LOCAL_EVENT_TYPE(wxEVT_HIDE_WAIT_WINDOW,   -1)
     DECLARE_LOCAL_EVENT_TYPE(wxEVT_EXTEND_TICK,        -1)
+    DECLARE_LOCAL_EVENT_TYPE(wxEVT_NEW_VERSION_AVAILABLE, -1)
 
     const int SHOW_WAIT_WINDOW_EVENT_ID = 100001;
     const int UPDT_WAIT_WINDOW_EVENT_ID = 100002;
@@ -458,6 +459,7 @@ namespace AriaMaestosa
         void evt_freeVolumeSlider( wxCommandEvent& evt );
         void evt_freeTimeSigPicker( wxCommandEvent& evt );
         void evt_extendTick(wxCommandEvent& evt );
+        void evt_newVersionAvailable(wxCommandEvent& evt);
         
         void addIconItem(wxMenu* menu, int menuID, const wxString& label, const wxString& stockIconId);
 
