@@ -1,0 +1,4 @@
+
+#define VERSION_STRING L"1.3 beta 5"
+#define VERSION_INT 10305
+#define IS_BETA true
