@@ -1,4 +1,5 @@
 1.3 beta 6
+- Add option to check online for new versions of Aria
 - Save the vertical scroll of each track
 - Further improve magnetic grid
 - Add "Duplicate track" feature
